CTOO-337 (feature): Generate SQL queries from typed LogicalPlan (#216)
- **Add cli run**
- **expand model query**
- **Generate simple SQL from LogicalPlan**